# EmbedServer

./: .dockerignore  .gitignore  Dockerfile  compose.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: github-image.yml
embedserver/: app.py
src/: app.py
