[project]
name = "embedserver"
version = "1.0.0"
description = "Embed server for Botge."
authors = [
  { name = "gentlebob" },
  { name = "Tresster" }
]
requires-python = ">=3.13"
dependencies = [
  "flask==3.1.2",
  "yt-dlp==2025.10.22",
  "waitress==3.0.2",
  "apscheduler==3.11.1"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
